--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -243,8 +243,8 @@ plugins:
 
     <section id="trainings" class='relative max-w-7xl mx-auto sm:px-6 mb-6 pt-6'>
         <p class='text-center text-2xl md:text-3xl font-bold mb-2'>أكثر من مجرد تدريب</p>
-        <div class="grid grid-cols-1 gap-4 mt-6 md:gap-12 md:mt-12 md:grid-cols-2 lg:grid-cols-3 ms-4 me-4">
-            <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+            <div class="flex flex-col justify-between h-full p-4 rounded-2xl border shadow-sm">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">متابعة شخصية</p>
                     <p class="mt-1 text-base font-normal">فريقنا دائماً معاك، نقدم المساعدة والدعم من خلال مجموعة واتساب لحل المشاكل وتقديم المشورة.</p>
@@ -253,7 +253,7 @@ plugins:
                     <i class="fa fa-users text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto">
+            <div class="relative flex flex-col justify-between h-full p-4 rounded-2xl bg-green-600 text-white">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">شهادة معتمدة</p>
                     <p class="mt-1 text-base font-normal">مني كاتسالي تدريب كتاخد شهادة معتمدة من عندنا لي كاتفتح ليك فرص جداد فحياتك</p>
@@ -262,7 +262,7 @@ plugins:
                     <i class="fa fa-user-graduate text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto">
+            <div class="relative flex flex-col justify-between h-full p-4 rounded-2xl bg-red-primary">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">مشاريع برمجية</p>
                     <p class="mt-1 text-base font-normal">دوراتنا عملية بنسبة 100٪، حيث ستعمل على مشاريع برمجية تطبيقية تساهم في تطوير مهاراتك.</p>
@@ -322,7 +322,7 @@ plugins:
                 </div>
             </div>
 
-            <div class="flex flex-row justify-between items-center w-full gap-2 md:gap-4">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
                 <div class="flex flex-col justify-between items-start  h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm">
                     <p class="text-sm font-medium text-right text-white rounded-md w-fit px-2 py-1 mb-2 bg-neutral-400">أداء كل شهر</p>
                     <p class="line-through text-2xl font-bold text-right text-gray-600">299 درهم</p>
