--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -253,7 +253,7 @@ plugins:
                     <i class="fa fa-users text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="relative flex flex-col justify-between h-full p-4 rounded-2xl bg-green-600 text-white">
+            <div class="flex flex-col justify-between h-full p-4 rounded-2xl border shadow-sm">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">شهادة معتمدة</p>
                     <p class="mt-1 text-base font-normal">مني كاتسالي تدريب كتاخد شهادة معتمدة من عندنا لي كاتفتح ليك فرص جداد فحياتك</p>
@@ -262,7 +262,7 @@ plugins:
                     <i class="fa fa-user-graduate text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="relative flex flex-col justify-between h-full p-4 rounded-2xl bg-red-primary">
+            <div class="flex flex-col justify-between h-full p-4 rounded-2xl border shadow-sm">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">مشاريع برمجية</p>
                     <p class="mt-1 text-base font-normal">دوراتنا عملية بنسبة 100٪، حيث ستعمل على مشاريع برمجية تطبيقية تساهم في تطوير مهاراتك.</p>
@@ -275,7 +275,7 @@ plugins:
         <div id="pricing"></div>
     </section>
     
-    <section class="relative max-w-xl mx-auto py-6 px-5 sm:px-12 mb-4 md:py-8">
+    <section class="relative max-w-xl mx-auto py-6 px-5 sm:px-12 mb-4 md:py-8 text-[black]">
         <div class="w-full bg-white rounded-2xl shadow-md p-6 flex flex-col justify-center items-center">
             <p class="text-2xl md:text-3xl font-bold text-right mb-2">الاستثمار الذي سيغير حياتك للأبد !</p>
             <ul class="text-right space-y-1">
@@ -284,7 +284,7 @@ plugins:
                     <p class="text-lg text-right">حصص برمجية</p>
                 </li>
                 <li class="flex items-start ml-auto gap-3">
-                    <p class="text-lg "><i class="fas fa-award"></i></p>
+                    <p class="text-lg"><i class="fas fa-award"></i></p>
                     <p class="text-lg text-right">شهادة معتمدة</p>
                 </li>
                 <li class="flex items-start ml-auto gap-3">
