--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -24,10 +24,10 @@ plugins:
                     اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!
                 </p>
                 <div class="mx-auto max-w-none flex justify-around items-center flex-col md:flex-row gap-2 md:gap-0" x-data >
-                    <a class="btn text-white bg-green-primary w-full px-0  md:my-6 " href="#pricing" >
+                    <a class="transition-transform transform hover:scale-105 btn text-white bg-green-primary w-full px-0  md:my-6 " href="#pricing" >
                         بغيت نتعلم  
                     </a>
-                    <a class="btn bg-white shadow-lg border-b-1 border-base-300 w-full px-0 md:my-6 mr-0 md:mr-4"
+                    <a class="transition-transform transform hover:scale-105 btn bg-white shadow-lg border-b-1 border-base-300 w-full px-0 md:my-6 mr-0 md:mr-4"
                     href="#content"
                     style="color: black">
                         محتوى تدريب
@@ -283,7 +283,7 @@ plugins:
             </div>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-                <div class="flex flex-col justify-between items-start  h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm">
+                <div class="transition-transform transform hover:scale-105 flex flex-col justify-between items-start  h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm">
                     <p class="text-sm font-medium text-right text-white rounded-md w-fit px-2 py-1 mb-2 bg-neutral-400">أداء كل شهر</p>
                     <p class="line-through text-2xl font-bold text-right text-gray-600">299 درهم</p>
                     <div class="flex flex-row justify-center items-baseline">
@@ -298,7 +298,7 @@ plugins:
                         class="w-full py-1 rounded-md text-base md:text-lg font-medium text-center text-white bg-[#0fb579]">تسجيل</a>
                 </div> 
 
-                <div class="mt-2 relative flex flex-col justify-between items-start h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm bg-[#0fb579] text-white">
+                <div class="transition-transform transform hover:scale-105 mt-2 relative flex flex-col justify-between items-start h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm bg-[#0fb579] text-white">
                     <span class="absolute -top-3 left-3 bg-white text-[#0fb579] text-xs font-semibold px-2 py-0.5 rounded">
                         🏆 الأكثر اختيارًا
                     </span>
@@ -316,7 +316,7 @@ plugins:
                             class="w-full py-1 rounded-md  text-base md:text-lg font-medium text-center bg-white text-[#0fb579]">تسجيل</a>
                 </div>
 
-                <div class="mt-2 relative flex flex-col justify-between items-start h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm bg-[#030d2d]  text-white">
+                <div class="transition-transform transform hover:scale-105 mt-2 relative flex flex-col justify-between items-start h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm bg-[#030d2d]  text-white">
                     <span class="absolute -top-3 left-3 bg-white text-[#030d2d] text-xs font-semibold px-2 py-0.5 rounded">
                         🟢 القيمة الأفضل
                     </span>
@@ -326,8 +326,8 @@ plugins:
                         <p class=" text-5xl md:text-6xl font-bold text-right text-white pe-2">499</p>
                         <a class="text-lg md:text-xl font-semibold text-right text-white">درهم </a>              
                     </div>
+                        <p class="text-md text-right mb-2 mt-1 text-white">💸 وفر 300 درهم مقارنة بالدفع الشهري</p>     
                         <p class="text-md text-right mb-2 mt-1 text-white">💳 دفع مرة واحدة يشمل 3 أشهر كاملة</p>     
-                        <p class="text-md text-right mb-2 mt-1 text-white">💸 وفر 240 درهم مقارنة بالدفع الشهري</p>     
                         <p class="text-md text-right mb-2 mt-1 text-white">🎯 الخيار الأفضل للاستفادة بأقصى قيمة</p>     
                         <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20599%20%D8%AF%D8%B1%D9%87%D9%85."
                             onClick="fbq('track', 'Lead')" 
